--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/apriltag
-	previous = 
-	base = 4ee4afa
+	previous = 4ee4afa
+	base = 31992ff
 	trim = 
 	trimbase = 
