--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/apriltag
-	previous = 
-	base = 0ddecab
+	previous = 0ddecab
+	base = 76ad6f6
 	trim = 
 	trimbase = 
