--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/apriltag
-	previous = 
-	base = f30add6
+	previous = f30add6
+	base = 405dda0
 	trim = 
 	trimbase = 
