--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/apriltag
-	previous = 
-	base = 3f6ee22
+	previous = 3f6ee22
+	base = c7425c7
 	trim = 
 	trimbase = 
